# Exilens

./: .gitignore  README.md
bible/: bible.seed.json
chapters/: V01_C001_冻河立名.md  V01_C001_冻河立名.pack.json  V01_C002_静音呼号.md  V01_C002_静音呼号.pack.json  V01_C003_杜门旧账.md  V01_C003_杜门旧账.pack.json  V01_C004_双账本.md  V01_C004_双账本.pack.json  V01_C005_码头旧影.md  V01_C005_码头旧影.pack.json
characters/A/: border_chen_kouan.json  capital_frontdesk.json  capital_proxy_lieutenant.json  emotion_yifu_partner.json  engineering_dong_san.json  family_mother.json  family_sister.json  finance_ma_accountant.json  jp_partner.json  lawyer_portcity.json  logistics_qiu_jianjun.json  police_gao_shumin.json  police_liu_min.json  police_old_han.json  police_zhou_qiming.json  social_old_friend.json  translator_broker.json  warehouse_he_cang.json
characters/S/: capital_proxy.json  oldboss.json  protagonist.json  strategist.json  yifu.json
characters/_spec/: character.schema.json
prompts/: chapter_prompt.md  pack.schema.json  style_rules.md
timeline/: continuity.json
tools/novel_factory/: README.md  pyproject.toml
tools/novel_factory/novel_factory/: __init__.py  cli.py  config.py  continuity.py  exporter.py  pack.schema.json  pack_parser.py  prompt_builder.py  prompt_snapshot.py  rules_softener.py  style_cards.py
tools/novel_factory/tests/: conftest.py  test_continuity_bom.py  test_pack_parser.py  test_prompt_builder.py  test_prompt_snapshot.py  test_rules_softener.py  test_smoke.py
